--- a/web/src/style.css
+++ b/web/src/style.css
@@ -25,6 +25,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  align-items: center;
+
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -59,8 +61,12 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  /*max-width: 1280px;*/
+  /*margin: 0 auto;*/
+  /*margin: auto;*/
+  width: 100%;
+  height: 100%;
+  align-items: center;
   padding: 2rem;
   text-align: center;
 }
